Fixed hibernate @GeneratedValue from Auto to Identify. Wrote a script to fix the import.sql formatting so everything loads via hiberate.
